// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom reports creation should expand filters for custom reports 1`] = `
<div>
  <div
    class="overlay-sc-1up1mft-0 MmcNI"
  >
    <div
      class="popup__Content-br7oqf-0 bmovpd"
    >
      <div
        class="action_popup__PopupContainer-sc-6dvik9-0 fwzUyw"
      >
        <div
          class="action_popup__HeaderContainer-sc-6dvik9-3 pQDGY"
        >
          <span
            class="action_popup__HeaderTitle-sc-6dvik9-4 cmNKLI"
          >
            Generate a new Report
          </span>
          <div
            class="action_popup__HeaderClose-sc-6dvik9-5 fSRmOH"
          >
            <svg
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.707 11.293l5.657-5.657-5.657 5.657zM12 12zm-.707.707l-5.657 5.657 5.657-5.657zM13.414 12l5.657 5.657a1 1 0 0 1-1.414 1.414L12 13.414l-5.657 5.657a1 1 0 1 1-1.414-1.414L10.586 12 4.929 6.343A1 1 0 0 1 6.343 4.93L12 10.586l5.657-5.657a1 1 0 0 1 1.414 1.414L13.414 12zm-.707.707l5.657 5.657-5.657-5.657zm-1.414-1.414L5.636 5.636l5.657 5.657z"
                fill="#a3aaaf"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          class="report_creation__Wrapper-sc-1bzzh01-1 eOvcGX"
        >
          <form>
            <div
              class="custom_report__Wrapper-sc-15t99dv-0 VcaoA"
            >
              <div>
                <div
                  class="field_wrapper-n32k2e-0 irXinp"
                >
                  <div />
                  <div
                    class="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
                  >
                    <div
                      class="input_wrapper-sc-15hmhfy-0 input_filter__CustomImputWrapper-ps184o-0 cmncmF"
                    >
                      <input
                        class="input_filter__HtmlInput-ps184o-1 YduAK"
                        name="title"
                        placeholder="Report Name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="filter-item"
              >
                <div
                  class="DateRangePicker DateRangePicker_1"
                >
                  <div>
                    <div
                      class="DateRangePickerInput DateRangePickerInput_1 DateRangePickerInput__showClearDates DateRangePickerInput__showClearDates_2"
                    >
                      <div
                        class="DateInput DateInput_1"
                      >
                        <input
                          aria-describedby="DateInput__screen-reader-message-startDateId"
                          aria-label="From"
                          autocomplete="off"
                          class="DateInput_input DateInput_input_1 DateInput_input__readOnly DateInput_input__readOnly_2"
                          id="startDateId"
                          name="startDateId"
                          placeholder="From"
                          readonly=""
                          type="text"
                          value="09/16/2019"
                        />
                        <p
                          class="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                          id="DateInput__screen-reader-message-startDateId"
                        >
                          Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
                        </p>
                      </div>
                      <div
                        aria-hidden="true"
                        class="DateRangePickerInput_arrow DateRangePickerInput_arrow_1"
                        role="presentation"
                      >
                        <svg
                          class="DateRangePickerInput_arrow_svg DateRangePickerInput_arrow_svg_1"
                          focusable="false"
                          viewBox="0 0 1000 1000"
                        >
                          <path
                            d="M694 242l249 250c12 11 12 21 1 32L694 773c-5 5-10 7-16 7s-11-2-16-7c-11-11-11-21 0-32l210-210H68c-13 0-23-10-23-23s10-23 23-23h806L662 275c-21-22 11-54 32-33z"
                          />
                        </svg>
                      </div>
                      <div
                        class="DateInput DateInput_1"
                      >
                        <input
                          aria-describedby="DateInput__screen-reader-message-endDateId"
                          aria-label="To"
                          autocomplete="off"
                          class="DateInput_input DateInput_input_1 DateInput_input__readOnly DateInput_input__readOnly_2"
                          id="endDateId"
                          name="endDateId"
                          placeholder="To"
                          readonly=""
                          type="text"
                          value="09/16/2019"
                        />
                        <p
                          class="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                          id="DateInput__screen-reader-message-endDateId"
                        >
                          Navigate backward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
                        </p>
                      </div>
                      <button
                        aria-label="Clear Dates"
                        class="DateRangePickerInput_clearDates DateRangePickerInput_clearDates_1 DateRangePickerInput_clearDates_default DateRangePickerInput_clearDates_default_2"
                        type="button"
                      >
                        <svg
                          class="DateRangePickerInput_clearDates_svg DateRangePickerInput_clearDates_svg_1"
                          focusable="false"
                          viewBox="0 0 12 12"
                        >
                          <path
                            d="M11.53.47a.75.75 0 0 0-1.061 0l-4.47 4.47L1.529.47A.75.75 0 1 0 .468 1.531l4.47 4.47-4.47 4.47a.75.75 0 1 0 1.061 1.061l4.47-4.47 4.47 4.47a.75.75 0 1 0 1.061-1.061l-4.47-4.47 4.47-4.47a.75.75 0 0 0 0-1.061z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="filter-item"
              >
                <div
                  class=" css-chbh3k-container"
                >
                  <div
                    class=" css-vr5vfp-control"
                  >
                    <div
                      class=" css-1hwfws3"
                    >
                      <div
                        class=" css-1y2mitp-placeholder"
                      >
                        Payment Method
                      </div>
                      <div
                        class="css-pe2t16"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-4-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1wy0on6"
                    >
                      <span />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-19bqh2r"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="filter-item"
              >
                <div
                  class=" css-chbh3k-container"
                >
                  <div
                    class=" css-vr5vfp-control"
                  >
                    <div
                      class=" css-1hwfws3"
                    >
                      <div
                        class=" css-1y2mitp-placeholder"
                      >
                        Status
                      </div>
                      <div
                        class="css-pe2t16"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-5-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1wy0on6"
                    >
                      <span />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-19bqh2r"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="filter-item"
              >
                <div
                  class="input_search__InputWrapper-sc-1voy22s-1 dJveMv"
                >
                  <svg
                    height="24"
                    style="margin: auto; padding-left: 8px;"
                    viewBox="0 0 15 15"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.44 9.18c.68 0 1.307-.17 1.88-.51A3.774 3.774 0 0 0 8.68 7.3c.333-.573.5-1.2.5-1.88 0-.68-.167-1.307-.5-1.88a3.697 3.697 0 0 0-1.36-1.36c-.573-.333-1.2-.5-1.88-.5-.68 0-1.307.167-1.88.5a3.774 3.774 0 0 0-1.37 1.36c-.34.573-.51 1.2-.51 1.88 0 .68.17 1.307.51 1.88.34.573.797 1.03 1.37 1.37.573.34 1.2.51 1.88.51zm5 0l4.14 4.14-1.26 1.26-4.14-4.16v-.66l-.24-.22a4.946 4.946 0 0 1-1.61.95c-.607.22-1.237.33-1.89.33-.987 0-1.897-.24-2.73-.72A5.34 5.34 0 0 1 .74 8.16 5.315 5.315 0 0 1 0 5.42c0-.987.243-1.897.73-2.73A5.346 5.346 0 0 1 2.71.72 5.374 5.374 0 0 1 5.44 0c.987 0 1.9.247 2.74.74a5.286 5.286 0 0 1 1.93 1.96c.473.827.71 1.733.71 2.72 0 .667-.11 1.303-.33 1.91a4.946 4.946 0 0 1-.95 1.61l.22.24h.68z"
                      fill="#A3AAAF"
                      fill-rule="nonzero"
                    />
                  </svg>
                  <input
                    class="input_search__HtmlInput-sc-1voy22s-0 iocwMH"
                    name="search-text"
                    placeholder="Keyword"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <span
                class="more"
              >
                Show less
              </span>
              <div>
                <div
                  class="field_wrapper-n32k2e-0 irXinp"
                >
                  <div />
                  <div
                    class="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
                  >
                    <div
                      class="input_wrapper-sc-15hmhfy-0 input_filter__CustomImputWrapper-ps184o-0 nQJDy"
                    >
                      <input
                        class="input_filter__HtmlInput-ps184o-1 YduAK"
                        name="currency"
                        placeholder="Currency"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="field_wrapper-n32k2e-0 irXinp"
                >
                  <div />
                  <div
                    class="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
                  >
                    <div
                      class="input_wrapper-sc-15hmhfy-0 input_currency__CustomImputWrapper-kqs48h-0 ihGBhv"
                    >
                      <input
                        class="input_currency__HtmlInput-kqs48h-1 haYqit"
                        name="amount"
                        placeholder="Amount"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="field_wrapper-n32k2e-0 irXinp"
                >
                  <div />
                  <div
                    class="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
                  >
                    <div
                      class="input_wrapper-sc-15hmhfy-0 input_filter__CustomImputWrapper-ps184o-0 nQJDy"
                    >
                      <input
                        class="input_filter__HtmlInput-ps184o-1 YduAK"
                        name="customerId"
                        placeholder="Customer Id"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="field_wrapper-n32k2e-0 irXinp"
                >
                  <div />
                  <div
                    class="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
                  >
                    <div
                      class="input_wrapper-sc-15hmhfy-0 input_filter__CustomImputWrapper-ps184o-0 nQJDy"
                    >
                      <input
                        class="input_filter__HtmlInput-ps184o-1 YduAK"
                        name="transactionId"
                        placeholder="Transaction Id"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="field_wrapper-n32k2e-0 irXinp"
                >
                  <div />
                  <div
                    class="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
                  >
                    <div
                      class="input_wrapper-sc-15hmhfy-0 input_filter__CustomImputWrapper-ps184o-0 nQJDy"
                    >
                      <input
                        class="input_filter__HtmlInput-ps184o-1 YduAK"
                        name="merchantTransactionId"
                        placeholder="Merchant Transaction Id"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="button-conatiner"
              >
                <button
                  class="primary__Button-sc-1lwi4g7-0 kLABFK"
                  disabled=""
                  type="submit"
                >
                  <span>
                    Generate Report
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Custom reports creation should show filters for custom report 1`] = `
<div>
  <div
    class="overlay-sc-1up1mft-0 MmcNI"
  >
    <div
      class="popup__Content-br7oqf-0 bmovpd"
    >
      <div
        class="action_popup__PopupContainer-sc-6dvik9-0 fwzUyw"
      >
        <div
          class="action_popup__HeaderContainer-sc-6dvik9-3 pQDGY"
        >
          <span
            class="action_popup__HeaderTitle-sc-6dvik9-4 cmNKLI"
          >
            Generate a new Report
          </span>
          <div
            class="action_popup__HeaderClose-sc-6dvik9-5 fSRmOH"
          >
            <svg
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.707 11.293l5.657-5.657-5.657 5.657zM12 12zm-.707.707l-5.657 5.657 5.657-5.657zM13.414 12l5.657 5.657a1 1 0 0 1-1.414 1.414L12 13.414l-5.657 5.657a1 1 0 1 1-1.414-1.414L10.586 12 4.929 6.343A1 1 0 0 1 6.343 4.93L12 10.586l5.657-5.657a1 1 0 0 1 1.414 1.414L13.414 12zm-.707.707l5.657 5.657-5.657-5.657zm-1.414-1.414L5.636 5.636l5.657 5.657z"
                fill="#a3aaaf"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          class="report_creation__Wrapper-sc-1bzzh01-1 eOvcGX"
        >
          <form>
            <div
              class="custom_report__Wrapper-sc-15t99dv-0 VcaoA"
            >
              <div>
                <div
                  class="field_wrapper-n32k2e-0 irXinp"
                >
                  <div />
                  <div
                    class="input__InputErrorWrapper-sc-1dz7i8-0 cAUOWl"
                  >
                    <div
                      class="input_wrapper-sc-15hmhfy-0 input_filter__CustomImputWrapper-ps184o-0 cmncmF"
                    >
                      <input
                        class="input_filter__HtmlInput-ps184o-1 YduAK"
                        name="title"
                        placeholder="Report Name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="filter-item"
              >
                <div
                  class="DateRangePicker DateRangePicker_1"
                >
                  <div>
                    <div
                      class="DateRangePickerInput DateRangePickerInput_1 DateRangePickerInput__showClearDates DateRangePickerInput__showClearDates_2"
                    >
                      <div
                        class="DateInput DateInput_1"
                      >
                        <input
                          aria-describedby="DateInput__screen-reader-message-startDateId"
                          aria-label="From"
                          autocomplete="off"
                          class="DateInput_input DateInput_input_1 DateInput_input__readOnly DateInput_input__readOnly_2"
                          id="startDateId"
                          name="startDateId"
                          placeholder="From"
                          readonly=""
                          type="text"
                          value="09/16/2019"
                        />
                        <p
                          class="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                          id="DateInput__screen-reader-message-startDateId"
                        >
                          Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
                        </p>
                      </div>
                      <div
                        aria-hidden="true"
                        class="DateRangePickerInput_arrow DateRangePickerInput_arrow_1"
                        role="presentation"
                      >
                        <svg
                          class="DateRangePickerInput_arrow_svg DateRangePickerInput_arrow_svg_1"
                          focusable="false"
                          viewBox="0 0 1000 1000"
                        >
                          <path
                            d="M694 242l249 250c12 11 12 21 1 32L694 773c-5 5-10 7-16 7s-11-2-16-7c-11-11-11-21 0-32l210-210H68c-13 0-23-10-23-23s10-23 23-23h806L662 275c-21-22 11-54 32-33z"
                          />
                        </svg>
                      </div>
                      <div
                        class="DateInput DateInput_1"
                      >
                        <input
                          aria-describedby="DateInput__screen-reader-message-endDateId"
                          aria-label="To"
                          autocomplete="off"
                          class="DateInput_input DateInput_input_1 DateInput_input__readOnly DateInput_input__readOnly_2"
                          id="endDateId"
                          name="endDateId"
                          placeholder="To"
                          readonly=""
                          type="text"
                          value="09/16/2019"
                        />
                        <p
                          class="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
                          id="DateInput__screen-reader-message-endDateId"
                        >
                          Navigate backward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
                        </p>
                      </div>
                      <button
                        aria-label="Clear Dates"
                        class="DateRangePickerInput_clearDates DateRangePickerInput_clearDates_1 DateRangePickerInput_clearDates_default DateRangePickerInput_clearDates_default_2"
                        type="button"
                      >
                        <svg
                          class="DateRangePickerInput_clearDates_svg DateRangePickerInput_clearDates_svg_1"
                          focusable="false"
                          viewBox="0 0 12 12"
                        >
                          <path
                            d="M11.53.47a.75.75 0 0 0-1.061 0l-4.47 4.47L1.529.47A.75.75 0 1 0 .468 1.531l4.47 4.47-4.47 4.47a.75.75 0 1 0 1.061 1.061l4.47-4.47 4.47 4.47a.75.75 0 1 0 1.061-1.061l-4.47-4.47 4.47-4.47a.75.75 0 0 0 0-1.061z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="filter-item"
              >
                <div
                  class=" css-chbh3k-container"
                >
                  <div
                    class=" css-vr5vfp-control"
                  >
                    <div
                      class=" css-1hwfws3"
                    >
                      <div
                        class=" css-1y2mitp-placeholder"
                      >
                        Payment Method
                      </div>
                      <div
                        class="css-pe2t16"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-2-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1wy0on6"
                    >
                      <span />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-19bqh2r"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="filter-item"
              >
                <div
                  class=" css-chbh3k-container"
                >
                  <div
                    class=" css-vr5vfp-control"
                  >
                    <div
                      class=" css-1hwfws3"
                    >
                      <div
                        class=" css-1y2mitp-placeholder"
                      >
                        Status
                      </div>
                      <div
                        class="css-pe2t16"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-3-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1wy0on6"
                    >
                      <span />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-19bqh2r"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="filter-item"
              >
                <div
                  class="input_search__InputWrapper-sc-1voy22s-1 dJveMv"
                >
                  <svg
                    height="24"
                    style="margin: auto; padding-left: 8px;"
                    viewBox="0 0 15 15"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.44 9.18c.68 0 1.307-.17 1.88-.51A3.774 3.774 0 0 0 8.68 7.3c.333-.573.5-1.2.5-1.88 0-.68-.167-1.307-.5-1.88a3.697 3.697 0 0 0-1.36-1.36c-.573-.333-1.2-.5-1.88-.5-.68 0-1.307.167-1.88.5a3.774 3.774 0 0 0-1.37 1.36c-.34.573-.51 1.2-.51 1.88 0 .68.17 1.307.51 1.88.34.573.797 1.03 1.37 1.37.573.34 1.2.51 1.88.51zm5 0l4.14 4.14-1.26 1.26-4.14-4.16v-.66l-.24-.22a4.946 4.946 0 0 1-1.61.95c-.607.22-1.237.33-1.89.33-.987 0-1.897-.24-2.73-.72A5.34 5.34 0 0 1 .74 8.16 5.315 5.315 0 0 1 0 5.42c0-.987.243-1.897.73-2.73A5.346 5.346 0 0 1 2.71.72 5.374 5.374 0 0 1 5.44 0c.987 0 1.9.247 2.74.74a5.286 5.286 0 0 1 1.93 1.96c.473.827.71 1.733.71 2.72 0 .667-.11 1.303-.33 1.91a4.946 4.946 0 0 1-.95 1.61l.22.24h.68z"
                      fill="#A3AAAF"
                      fill-rule="nonzero"
                    />
                  </svg>
                  <input
                    class="input_search__HtmlInput-sc-1voy22s-0 iocwMH"
                    name="search-text"
                    placeholder="Keyword"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <span
                class="more"
              >
                Show more
              </span>
              <div
                class="button-conatiner"
              >
                <button
                  class="primary__Button-sc-1lwi4g7-0 kLABFK"
                  disabled=""
                  type="submit"
                >
                  <span>
                    Generate Report
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Report creation should list default reports 1`] = `
<div
  className="overlay-sc-1up1mft-0 MmcNI"
  onClick={[Function]}
>
  <div
    className="popup__Content-br7oqf-0 bmovpd"
  >
    <div
      className="action_popup__PopupContainer-sc-6dvik9-0 fwzUyw"
    >
      <div
        className="action_popup__HeaderContainer-sc-6dvik9-3 pQDGY"
      >
        <span
          className="action_popup__HeaderTitle-sc-6dvik9-4 cmNKLI"
        >
          Select one of the default reports
        </span>
        <div
          className="action_popup__HeaderClose-sc-6dvik9-5 fSRmOH"
        >
          <svg
            height={24}
            onClick={[Function]}
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.707 11.293l5.657-5.657-5.657 5.657zM12 12zm-.707.707l-5.657 5.657 5.657-5.657zM13.414 12l5.657 5.657a1 1 0 0 1-1.414 1.414L12 13.414l-5.657 5.657a1 1 0 1 1-1.414-1.414L10.586 12 4.929 6.343A1 1 0 0 1 6.343 4.93L12 10.586l5.657-5.657a1 1 0 0 1 1.414 1.414L13.414 12zm-.707.707l5.657 5.657-5.657-5.657zm-1.414-1.414L5.636 5.636l5.657 5.657z"
              fill="#a3aaaf"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        className="report_creation__Wrapper-sc-1bzzh01-1 eOvcGX"
      >
        <div
          className="report_creation__ItemWrapper-sc-1bzzh01-0 cMHPBJ"
          onClick={[Function]}
        >
          <div
            className="check-mark"
          >
            <svg
              height={16}
              viewBox="0 0 40 40"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
              >
                <circle
                  cx="20"
                  cy="20"
                  fill="#d1d5d7"
                  r="20"
                />
                <path
                  d="M11.667 21.481l5.128 5.186L28.333 15"
                  stroke="#FFF"
                  strokeLinecap="round"
                  strokeWidth="2"
                />
              </g>
            </svg>
          </div>
          <div
            className="central-icon"
          >
            <svg
              height={32}
              viewBox="0 0 32 32"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
              >
                <circle
                  cx="16"
                  cy="16"
                  fill="#B7D2FB"
                  r="16"
                />
                <path
                  d="M21.672 12.719c.219.219.328.479.328.781v9.375c0 .313-.11.578-.328.797a1.085 1.085 0 0 1-.797.328h-9.75c-.313 0-.578-.11-.797-.328a1.085 1.085 0 0 1-.328-.797V9.125c0-.313.11-.578.328-.797.219-.219.484-.328.797-.328h5.406c.157 0 .308.031.453.094.021.01.037.02.047.031.021 0 .042.01.063.031.094.052.172.11.234.172l4.344 4.39zm-1.422.156l-3.125-3.156v3.156h3.125zm.625 10V14h-3.75c-.313 0-.578-.11-.797-.328a1.085 1.085 0 0 1-.328-.797v-3.75h-4.875v13.75h9.75z"
                  fill="#2E7EF2"
                />
              </g>
            </svg>
          </div>
          <span
            className="title"
          >
            Transactions Monthly Overview
          </span>
        </div>
        <div
          className="report_creation__ItemWrapper-sc-1bzzh01-0 cMHPBJ"
          onClick={[Function]}
        >
          <div
            className="check-mark"
          >
            <svg
              height={16}
              viewBox="0 0 40 40"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
              >
                <circle
                  cx="20"
                  cy="20"
                  fill="#d1d5d7"
                  r="20"
                />
                <path
                  d="M11.667 21.481l5.128 5.186L28.333 15"
                  stroke="#FFF"
                  strokeLinecap="round"
                  strokeWidth="2"
                />
              </g>
            </svg>
          </div>
          <div
            className="central-icon"
          >
            <svg
              height={32}
              viewBox="0 0 32 32"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
              >
                <circle
                  cx="16"
                  cy="16"
                  fill="#B7D2FB"
                  r="16"
                />
                <path
                  d="M21.672 12.719c.219.219.328.479.328.781v9.375c0 .313-.11.578-.328.797a1.085 1.085 0 0 1-.797.328h-9.75c-.313 0-.578-.11-.797-.328a1.085 1.085 0 0 1-.328-.797V9.125c0-.313.11-.578.328-.797.219-.219.484-.328.797-.328h5.406c.157 0 .308.031.453.094.021.01.037.02.047.031.021 0 .042.01.063.031.094.052.172.11.234.172l4.344 4.39zm-1.422.156l-3.125-3.156v3.156h3.125zm.625 10V14h-3.75c-.313 0-.578-.11-.797-.328a1.085 1.085 0 0 1-.328-.797v-3.75h-4.875v13.75h9.75z"
                  fill="#2E7EF2"
                />
              </g>
            </svg>
          </div>
          <span
            className="title"
          >
            Refunds Monthly Overview
          </span>
        </div>
        <div
          className="report_creation__ItemWrapper-sc-1bzzh01-0 cMHPBJ"
          onClick={[Function]}
        >
          <div
            className="check-mark"
          >
            <svg
              height={16}
              viewBox="0 0 40 40"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
              >
                <circle
                  cx="20"
                  cy="20"
                  fill="#d1d5d7"
                  r="20"
                />
                <path
                  d="M11.667 21.481l5.128 5.186L28.333 15"
                  stroke="#FFF"
                  strokeLinecap="round"
                  strokeWidth="2"
                />
              </g>
            </svg>
          </div>
          <div
            className="central-icon"
          >
            <svg
              height={32}
              viewBox="0 0 32 32"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
              >
                <circle
                  cx="16"
                  cy="16"
                  fill="#B7D2FB"
                  r="16"
                />
                <path
                  d="M21.672 12.719c.219.219.328.479.328.781v9.375c0 .313-.11.578-.328.797a1.085 1.085 0 0 1-.797.328h-9.75c-.313 0-.578-.11-.797-.328a1.085 1.085 0 0 1-.328-.797V9.125c0-.313.11-.578.328-.797.219-.219.484-.328.797-.328h5.406c.157 0 .308.031.453.094.021.01.037.02.047.031.021 0 .042.01.063.031.094.052.172.11.234.172l4.344 4.39zm-1.422.156l-3.125-3.156v3.156h3.125zm.625 10V14h-3.75c-.313 0-.578-.11-.797-.328a1.085 1.085 0 0 1-.328-.797v-3.75h-4.875v13.75h9.75z"
                  fill="#2E7EF2"
                />
              </g>
            </svg>
          </div>
          <span
            className="title"
          >
            Chargebacks
          </span>
        </div>
        <div
          className="report_creation__ItemWrapper-sc-1bzzh01-0 dKMRZh"
          onClick={[Function]}
        >
          <div
            className="check-mark"
          />
          <div
            className="central-icon"
          >
            <svg
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fillRule="evenodd"
              >
                <circle
                  cx="16"
                  cy="16"
                  fill="#B7D2FB"
                  r="16"
                />
                <path
                  d="M20 16.586h-3.348V20h-1.32v-3.414H12v-1.188h3.331V12h1.321v3.398H20z"
                  fill="#2E7EF2"
                  fillRule="nonzero"
                />
              </g>
            </svg>
          </div>
          <span
            className="title"
          >
            Set up your own report
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
